--- a/pom.xml
+++ b/pom.xml
@@ -118,5 +118,35 @@
             <artifactId>zkclient</artifactId>
             <version>0.10</version>
         </dependency>
+        <dependency>
+            <groupId>org.test4j</groupId>
+            <artifactId>test4j.nodep</artifactId>
+            <version>2.0.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.test4j</groupId>
+            <artifactId>test4j.core</artifactId>
+            <version>2.0.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.test4j</groupId>
+            <artifactId>test4j.junit</artifactId>
+            <version>2.0.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.test4j</groupId>
+            <artifactId>test4j.testng</artifactId>
+            <version>2.0.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.test4j</groupId>
+            <artifactId>test4j.integrated</artifactId>
+            <version>2.0.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.test4j</groupId>
+            <artifactId>test4j.spec</artifactId>
+            <version>2.0.7</version>
+        </dependency>
     </dependencies>
 </project>
